# rust-oauth2

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  database.rs  main.rs
templates/: base.html.j2  create_post.html.j2  home.html.j2  index.html.j2  login.html.j2
tests/: missing-todo.rs
