[package]
name = "lab02-2025"
version = "0.1.0"
edition = "2024"
authors = ["Gaby Roch <gaby.roch@heig-vd.ch>"]
publish = false

[dependencies]
eyre = "0.6.12"
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["minijinja"] }
rocket_oauth2 = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["serde"] }
